src/test/ui/parser/pat-tuple-2.stderr
error: trailing comma is not permitted after `..`
  --> $DIR/pat-tuple-2.rs:3:17
   |
LL |         (pat, ..,) => {}
   |                 ^ trailing comma is not permitted after `..`

error[E0308]: mismatched types
  --> $DIR/pat-tuple-2.rs:3:9
   |
LL |         (pat, ..,) => {}
   |         ^^^^^^^^^^ expected integer, found tuple
   |
   = note: expected type `{integer}`
              found type `(_,)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
